Bug 827227 - Fixed int overflow when scaling border-image-width. r=dbaron